--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.8.0/addons/p5.sound.js" integrity="sha512-TU9AWtV5uUZPX8dbBAH8NQF1tSdigPRRT82vllAQ1Ke28puiqLA6ZVKxtUGlgrH6yWFnkKy+sE6luNEGH9ar0A==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="https://p5play.org/v3/planck.min.js"></script>
   <script src="https://p5play.org/v3/p5play.js"></script>
+  <script src="GameThatWorks.js"></script>
+  <link rel="stylesheet" href="style.css">
   
 </head>
 
@@ -20,7 +22,9 @@
   BODY
 ****************************************************-->
 <body>
-  <script src="GameThatWorks.js"></script>
+  <h1>COIN GAME</h1>
+  <h2>Press START to play</h2>
+  <button onclick="start()">START</button>
 </body>
 </html>
 <!--***************************************************
